Issue #15944: memoryview: Allow arbitrary formats when casting to bytes. Original patch by Martin Panter.